Bug 1750973, don't replace the nsILayoutHistoryState object when doing same document history navigations, r=peterv a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D137703